force-app/main/default/objects/MA_CMS_Content_Index__c/MA_CMS_Content_Index__c.object-meta.xml
<CustomObject>
    <label>CMS Content Index</label>
    <pluralLabel>CMS Content Index</pluralLabel>
    <description>Points MaStoryContentController at the CMS content records that make up a GTM Offering&apos;s public page (industry story blocks, FAQ, site defaults). Exists because the CMS delivery API this org exposes can fetch one content record by Id reliably but has no working &quot;list everything of this type&quot; query -- see DEPLOYMENT.md. One row per CMS content record the page should show.</description>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <type>AutoNumber</type>
        <label>Index Number</label>
        <displayFormat>CMSIDX-{0000}</displayFormat>
    </nameField>
</CustomObject>