force-app/main/default/objects/MA_CMS_Content_Index__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Uncheck to pull this content off the live page immediately without touching the CMS record itself (unpublishing/deleting there is a separate, slower action).</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>