force-app/main/default/objects/MA_CMS_Content_Index__c/fields/CMS_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>CMS_Record_Id__c</fullName>
    <label>CMS Record Id</label>
    <description>Paste this straight from the browser address bar while viewing the content record open in the GTM Offerings CMS Workspace -- the 15 or 18-character Id right there in the URL. No separate "content key" lookup needed.</description>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <unique>true</unique>
</CustomField>