force-app/main/default/objects/MA_CMS_Content_Index__c/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <description>Which ManagedContentType this record belongs to. Matches force-app/main/default/managedContentTypes/.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ma_industry_story</fullName>
                <label>MA Industry Story</label>
            </value>
            <value>
                <fullName>ma_faq_item</fullName>
                <label>MA FAQ Item</label>
            </value>
            <value>
                <fullName>ma_story_setting</fullName>
                <label>MA Story Setting</label>
            </value>
            <value>
                <fullName>ma_story_page</fullName>
                <label>MA Story Page</label>
            </value>
            <value>
                <fullName>ma_story_body</fullName>
                <label>MA Story Body</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>