force-app/main/default/objects/MA_CMS_Content_Index__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <label>Display Order</label>
    <description>Lower numbers show first. Ties broken by CMS Record Id.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
</CustomField>