force-app/main/default/objects/MA_CMS_Content_Index__c/fields/Offering_Key__c.field-meta.xml
<CustomField>
    <fullName>Offering_Key__c</fullName>
    <label>Offering Key</label>
    <description>Matches MA_Offering__mdt.Offering_Key__c, e.g. migration-accelerator. Must match the offeringKey node value inside the CMS content record itself.</description>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <defaultValue>&quot;migration-accelerator&quot;</defaultValue>
</CustomField>