force-app/main/default/objects/MA_CMS_Content_Index__c/listViews/All_Content_Index.listView-meta.xml
<ListView>
    <fullName>All_Content_Index</fullName>
    <filterScope>Everything</filterScope>
    <label>All Content Index</label>
    <columns>NAME</columns>
    <columns>Content_Type__c</columns>
    <columns>Offering_Key__c</columns>
    <columns>CMS_Record_Id__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>